--- a/emotion-result/src/App.css
+++ b/emotion-result/src/App.css
@@ -10,8 +10,23 @@ h1{
 .ha{
    color:gray; 
 }
-.chart{
-   margin:auto;
-   width: 1000px;
-   height: 1000px;
+.text{
+    display: inline-block;
+    background-color: #dcdcdc;
+    margin-left: 30px;
+    width: 50%;
+}
+.wrap{
+    text-align: center;
+}
+a{
+    color:black;
+    text-decoration: none;
+}
+.recwrap{
+    margin-top: 50px;
+}
+.card{
+    margin-left:10px;
+    margin-right:10px;
 }
