--- a/emotion-result/src/App.css
+++ b/emotion-result/src/App.css
@@ -30,3 +30,24 @@ a{
     margin-left:10px;
     margin-right:10px;
 }
+.flip-container{
+    text-align:center;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.front{
+  z-index:2;
+  transform: rotateY(0deg);
+}
+.back {
+  transform: rotateY(180deg);
+}
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
