--- a/emotion-result/src/App.css
+++ b/emotion-result/src/App.css
@@ -52,14 +52,16 @@ a{
   position: relative;
 }
 .ttokbokki{
-    display: inline-block;
-    width: 300px;
-    height: 300px;
-    margin-right: 30px;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 .ramen{
-    display: inline-block;
-    width: 300px;
-    height: 300px;
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.button{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: block;
+    margin:auto;
 }
