--- a/emotion-result/src/App.css
+++ b/emotion-result/src/App.css
@@ -42,6 +42,7 @@ a{
 }
 .back {
   transform: rotateY(180deg);
+  width: 18rem;
 }
 .flip-container:hover .flipper, .flip-container.hover .flipper {
   transform: rotateY(180deg);
@@ -59,9 +60,11 @@ a{
     margin-top: 10px;
     margin-bottom: 30px;
 }
-.button{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: block;
-    margin:auto;
+.front, .back{
+  position: absolute;
+  backface-visibility:hidden;
 }
+.food{
+    margin-top:300px;
+}
+
