--- a/secondpage/src/App.css
+++ b/secondpage/src/App.css
@@ -7,21 +7,16 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:black;
 }
 
 #button{ 
@@ -59,14 +54,6 @@
   height: 400px; 
   float:left; 
   margin-right: 2.5%;
-}
-
-#info_1{
-  width: 400px; 
-  height: 400px; 
-  display:inline-block;  
-  margin-left: 2.5%; 
-  float:left;
 }
 
 .App-link {
