--- a/src/pages/restaurant/rst.css
+++ b/src/pages/restaurant/rst.css
@@ -1,20 +1,3 @@
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  .App-header {
-    background-color: #ffffff;
-    min-height: 100vh;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color:black;
-  }
-
-
   .button1{
     flex:1;
     width: 30%;
@@ -50,23 +33,36 @@
   #review{
     text-align: center;
     margin-left: 10%;
-    margin-right: 10%
+    margin-right: 10%;
+    clear: both;
   }
   
+  .parent{
+    width: 80%;
+    margin: 10px auto;
+  }
+
+  .warp{
+    width: 80%;
+    height: 600px;
+    margin: 10px auto;
+  }
+
+  .preview{
+    float: left;
+    width:40%;
+    box-sizing: border-box;
+  }
+
+  
   .map{
-    text-align: center;
+    float: right;
+    width:40%;
+    box-sizing: border-box;
   }
   
   .App-link {
     color: #61dafb;
   }
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
   
