--- a/src/pages/emotion/emotion.css
+++ b/src/pages/emotion/emotion.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 h1{
     text-align:center;
     font-size: 2em;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
     margin-bottom: 50px;
 }
 *{
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 .ha{
    color:gray; 
