--- a/src/pages/review/re_main.css
+++ b/src/pages/review/re_main.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 *{
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 .title{
     width: 250px;
+    margin-top: 30px;
     margin-top: 30px;
     margin-bottom: 30px;
     margin: auto;
@@ -13,9 +15,11 @@
     margin: auto;
 }
 #see{
+    margin-top: 100px;
     display: block;
-    width: 200px;
-    margin: auto;
+    width: 230px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .review-go{
     display: block;
@@ -31,4 +35,7 @@
     text-align:center;
     display: block;
     margin: auto;
+}
+#search{
+    width: 300px;
 }
