--- a/src/pages/review/re_main.css
+++ b/src/pages/review/re_main.css
@@ -15,7 +15,7 @@
     margin: auto;
 }
 #see{
-    margin-top: 100px;
+    margin-top: 30px;
     display: block;
     width: 230px;
     margin-left: auto;
@@ -27,8 +27,9 @@
     margin: auto;
 }
 #in{
-    width: 200px;
-    margin-right: 10px;
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 #bt2{
     width: 100px;
@@ -36,6 +37,27 @@
     display: block;
     margin: auto;
 }
-#search{
-    width: 300px;
+.jwfbbd{
+    font-size: 14px;
+    width: 700px;
+    display: block;
+    margin: auto;
+}
+#button-addon2{
+    display: block;
+    margin: auto;
+}
+#subtitle{
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+#bt2{
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+#loginCard{
+    margin: auto;
+    width: 1000px;
 }
