update: (나윤)_업데이트

--- a/src/pages/restaurant/rst.css
+++ b/src/pages/restaurant/rst.css
@@ -30,7 +30,7 @@
     text-align: center;
   }
   
-  #reviewcard{
+  .reviewcard{
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
