--- a/src/pages/allresults/result.css
+++ b/src/pages/allresults/result.css
@@ -1,6 +1,6 @@
 .result{
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 5%;
 }
 
@@ -8,3 +8,28 @@
     padding: 5%;
     margin-bottom: 5%;
 }
+
+.warp{
+    width: 100%;
+    height: 500px;
+    margin: 10px auto;
+}
+
+.firstcard{
+    flex:1;
+    width: 30%;
+    box-sizing: border-box;
+  }
+
+.secondcard{ 
+    flex:1;
+    margin: 0px 5%;
+    width:30%;
+    box-sizing: border-box;
+  }
+
+ .thirdcard{
+    flex:1;
+    width:30%;
+    box-sizing: border-box;
+  }
