--- a/src/pages/allresults/result.css
+++ b/src/pages/allresults/result.css
@@ -1,7 +1,8 @@
 .result{
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 2%;
+    margin-right: 2%;
     margin-top: 5%;
+    text-align: center;
 }
 
 .card{
@@ -9,9 +10,39 @@
     margin-bottom: 5%;
 }
 
-.warp{
+.wrap{
     width: 100%;
-    height: 500px;
+    height: 25rem;
+    margin-left: 2%;
+    margin-right: 2%;
+    text-align: center;
     margin: 10px auto;
+}
+.card{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.flip-container{
+    text-align:center;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.front{
+  z-index:2;
+  transform: rotateY(0deg);
+}
+.back {
+  transform: rotateY(180deg);
+
+}
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
 }
 
