--- a/src/pages/review/re_main.css
+++ b/src/pages/review/re_main.css
@@ -17,7 +17,7 @@
 #see{
     margin-top: 30px;
     display: block;
-    width: 230px;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
