--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
-input{
+input, textarea{
   -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
 }
