UPDATE : 어바웃샤브 테스트

--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,10 @@
   }
 }
 
-input, textarea{
-  -webkit-user-select: text;
-  -khtml-user-select: text;
-  -moz-user-select: text;
-  -ms-user-select: text;
-  user-select: text;
+*{
+  -webkit-user-select: auto;
+  -khtml-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
 }
